[package]
name = "opencubes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
ash = { version="0.37.0+1.3.209",features = ["linked", "debug"] }
ash-window = "0.10.0"
log = { version="0.4.17", features = ["release_max_level_off"] }
env_logger = "0.9.0"
lazy_static = "1.4.0"
cstr = "0.2.10"

[profile.release]
lto = true
strip = true